maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setDirection() = Direction.NORTH
    ^Escaper:33: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^